--- a/Toy_PJT/Django/좋아요 팔로우 구현(with pair)/accounts/templates/accounts/profile.html
+++ b/Toy_PJT/Django/좋아요 팔로우 구현(with pair)/accounts/templates/accounts/profile.html
@@ -3,12 +3,13 @@
 {% block content %}
   <h1>{{ person.username }}님의 프로필</h1>
   <div>
-    팔로워 : {{ person.followers.all|length }} / 팔로잉 : {{ person.followings.all|length }}
+    팔로워 : <span id="follower">{{ person.followers.all|length }}</span>
+    / 팔로잉 : <span id="following">{{ person.followings.all|length }}</span>
   </div>
 
   {% if request.user != person %}
   <div>
-    <form action="{% url 'accounts:follow' person.pk %}" method="POST">
+    <form id='follow-form' data-user-id =  {{ person.id }}>
       {% csrf_token %}
       {% if request.user in person.followers.all %}
         <input type="submit" value="언팔로우">
@@ -40,3 +41,38 @@
 
   <a href="{% url 'articles:index' %}">back</a>
 {% endblock content %}
+
+{% block script %}
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>
+  const follow_form = document.querySelector('#follow-form')
+  const csrf_token = document.querySelector('[name=csrfmiddlewaretoken]').value
+  if (follow_form){
+    follow_form.addEventListener('submit', (event) => {
+      event.preventDefault()
+      const userId = event.target.dataset.userId
+      axios({
+        method : 'POST',
+        url : `/accounts/${userId}/follow/`,
+        headers : {'X-CSRFToken' : csrf_token},
+    })
+        .then((response) => {
+          const isFollowed = response.data.is_followed
+          const followBtn = document.querySelector('#follow-form > input[type=submit]')
+          if (isFollowed === true) {
+            followBtn.value = '언팔로우'
+          } else {
+            followBtn.value = '팔로우'
+          }
+          const followerInfo = document.querySelector('#follower')
+          //const followingInfo = document.querySelector('#following')
+          const followerCount = response.data.follower
+          followerInfo.innerText = followerCount
+          //const followingCount = document.querySelector('#following')
+        })
+        .catch((error) => {
+          console.log('error')
+        })
+    })}
+</script>
+{% endblock script %}
