--- a/Toy_PJT/Django/좋아요 팔로우 구현(with pair)/articles/templates/articles/index.html
+++ b/Toy_PJT/Django/좋아요 팔로우 구현(with pair)/articles/templates/articles/index.html
@@ -13,7 +13,7 @@
     <p>글 번호 : {{ article.pk }}</p>
     <p>제목 : {{ article.title }}</p>
     <p>내용 : {{ article.content }}</p>
-    <p>좋아요 수 : <span id="likes">{{ article.like_users.count }}</span></p>
+    <p>좋아요 수 : <span id="likes-{{ article.pk }}">{{ article.like_users.count }}</span></p>
     <div>
       <form id="like_form" data-article-pk={{ article.pk }}>
         {% csrf_token %}
@@ -31,35 +31,37 @@
 {% block script %}
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
-  const likeForm = document.querySelector("#like_form")
+  const likeForm = document.querySelectorAll("#like_form")
   const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value
 
-  
-  likeForm.addEventListener('submit', (event) => {
-    event.preventDefault()
-    const articlePk = event.target.dataset.articlePk
-    axios({
-      method:'post', 
-      url: `http://127.0.0.1:8000/articles/${articlePk}/likes/`, 
-      headers: {'X-CSRFToken' : csrftoken},
-    })
-    .then((response) => {
-      console.log('아무튼 이한나 탓')
-      const likeArticle = response.data.like_article
-      const likeArticleBtn = document.querySelector(`#like-${articlePk}`)
-      const likes = document.querySelector('#likes')
-      let likeCount = response.data.likes_cnt
-      likes.innerText = likeCount
-      console.log(likeCount)
-      if (likeArticle === true){
-        likeArticleBtn.value = "좋아요 취소"
-      }
-      else {
-        likeArticleBtn.value = "좋아요"
-      }
-    })
-    .catch((error) => {
-      console.log('다 이한나 탓')
+  likeForm.forEach((form) => {
+    form.addEventListener('submit', (event) => {
+      event.preventDefault()
+      const articlePk = event.target.dataset.articlePk
+      axios({
+        method:'post', 
+        url: `/articles/${articlePk}/likes/`, 
+        headers: {'X-CSRFToken' : csrftoken},
+      })
+      .then((response) => {
+        console.log(response)
+        console.log('아무튼 이한나 탓')
+        const likeArticle = response.data.like_article
+        const likeArticleBtn = document.querySelector(`#like-${articlePk}`)
+        const likes = document.querySelector(`#likes-${articlePk}`)
+        let likeCount = response.data.likes_cnt
+        likes.innerText = likeCount
+        console.log(likeCount)
+        if (likeArticle === true){
+          likeArticleBtn.value = "좋아요 취소"
+        }
+        else {
+          likeArticleBtn.value = "좋아요"
+        }
+      })
+      .catch((error) => {
+        console.log('다 이한나 탓')
+      })
     })
   })
 </script>
