--- a/JAVA/hello-spring/src/main/resources/templates/hello-template.html
+++ b/JAVA/hello-spring/src/main/resources/templates/hello-template.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
 <body>
-$END$
+<p th:text="'hello ' + ${n ame}">hello! empty</p>
 </body>
 </html>
